all priorities sorted

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,8 @@ flutter:
      - assets/AppIcon-Flista.png
      - assets/login_image.png
      - assets/flista.jpg
+     - assets/airplaneProgress.png
+
    
 
 
