--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,7 +94,8 @@ flutter:
      - assets/login_image.png
      - assets/flista.jpg
      - assets/airplaneProgress.png
-
+     - assets/airplanebg.png
+     - assets/ticketCard.png
    
 
 
