--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,9 @@ flutter:
      - assets/ticketCard.png
      - assets/from.png
      - assets/to.png
+     - assets/noticket.png
+     
+
    
 
 
