--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -103,6 +103,7 @@ flutter:
      - assets/noticket.png
      - assets/airplaneticket.png
      - assets/barcode.png
+     - assets/itsystems.png
 
    
      
