home updated now

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -104,6 +104,8 @@ flutter:
      - assets/airplaneticket.png
      - assets/barcode.png
      - assets/itsystems.png
+     - assets/world.png
+     - assets/arrows.png
 
    
      
