--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   device_info_plus: ^11.1.1
   dropdown_search: ^5.0.6
   modal_bottom_sheet: ^3.0.0
+  package_info_plus: ^8.2.0
 
 
 flutter_icons:
