--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -116,7 +116,7 @@ flutter:
      - assets/Star3.png
      - assets/Star4.png
      - assets/Star5.png
-     - assets/seats.jpg
+     - assets/seats.png
      - assets/splash.png
 
 
