--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -118,6 +118,10 @@ flutter:
      - assets/Star5.png
      - assets/seats.png
      - assets/splash.png
+     - assets/line.png
+     - assets/flistalogin.png
+
+
 
 
 
