--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,9 @@ dependencies:
   pull_to_refresh: ^2.0.0
   location: ^7.0.1
   permission_handler: ^10.2.0
-  
+  flutter_inappwebview: ^6.1.5
+  webview_flutter: ^4.10.0
+
 
 
 flutter_icons:
