flista standy and yaana

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -126,6 +126,7 @@ flutter:
      - assets/flistalogin.png
      - assets/airplane-route-line.png
      - assets/airplane-route-plane.png
+     - assets/topbanner.png
 
 
 
