--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   permission_handler: ^10.2.0
   flutter_inappwebview: ^6.1.5
   webview_flutter: ^4.10.0
+  font_awesome_flutter: ^10.8.0
+  flutter_svg: ^2.0.17
 
 
 
@@ -127,7 +129,14 @@ flutter:
      - assets/airplane-route-line.png
      - assets/airplane-route-plane.png
      - assets/topbanner.png
-
+     - assets/chatbot.svg
+     - assets/home.svg
+     - assets/history.svg
+     - assets/ticket.svg
+     - assets/chatbot.png
+     - assets/home.png
+     - assets/history.png
+     - assets/ticket.png
 
 
 
